<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity">

    <TextView
        android:id="@+id/UUIDUserDetailextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameUserDetailTextView" />

    <TextView
        android:id="@+id/nameUserDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoUserDetailImageView" />

    <ImageView
        android:id="@+id/photoUserDetailImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_default_photo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coursesUserDetailRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@id/goBackUserDetailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UUIDUserDetailextView" />

    <ImageButton
        android:id="@+id/favoriteUserDetailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onFavoriteUserDetailButtonClicked"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageButton
        android:id="@+id/unfavoriteUserDetailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onUnfavoriteUserDetailButtonClicked"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageButton
        android:id="@+id/waveUserDetailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:adjustViewBounds="true"
        android:maxHeight="50dp"
        android:onClick="onWaveUserDetailButtonClicked"
        android:scaleType="centerInside"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoriteUserDetailButton"
        app:srcCompat="@drawable/wave" />

    <ImageButton
        android:id="@+id/unwaveUserDetailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:adjustViewBounds="true"
        android:maxHeight="50dp"
        android:onClick="onUnwaveUserDetailButtonClicked"
        android:scaleType="centerInside"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unfavoriteUserDetailButton"
        app:srcCompat="@drawable/unwave" />

    <ImageView
        android:id="@+id/wavedUserDetailImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:adjustViewBounds="true"
        android:maxHeight="50dp"
        android:scaleType="centerInside"
        android:scaleX="-1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unwave" />

    <Button
        android:id="@+id/goBackUserDetailButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onGoBackUserDetailButtonClicked"
        android:text="GO BACK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coursesUserDetailRecyclerView" />
</androidx.constraintlayout.widget.ConstraintLayout>